--- a/README.me
+++ b/README.me
@@ -1,14 +1,15 @@
-### TESTTING DOCKER_FLASK_PYTHON
+# TESTTING DOCKER_FLASK_PYTHON
 
 En esta aplicación se crea una imagen DOCKER y su respectivo contenedor.
 
 COMANDOS UTILIZADOS:
 
-#### PARA CREAR LA IMAGEN:
+## PARA CREAR LA IMAGEN:
 
 **docker build -t flaskapp .**
 
-#### PARA CREAR EL CONTENEDOR
+## PARA CREAR EL CONTENEDOR
 
-**docker run -it -d --name testing-flasking  --publish 8001:4000 flaskapp** 
+**docker run -it -d --name testing-flasking  --publish 8001:4000 flaskapp**
+
 
